--- a/chart.html
+++ b/chart.html
@@ -7,11 +7,17 @@
 	<link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
 	<link rel="icon" href="imge-08.png" type="image/png">
 	<link rel="stylesheet" type="text/css" href="404.css">
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<meta name="description" content="The Consolidated results for foodyC Winter Contest Category 2 Maximum Votes."/>
 	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
 	<meta name="author" content="Foody Couple.">
+	<script src="rClickd.js"></script>
+	<meta property="og:url"                content="www.foodyc.xyz/Contests" />
+	<meta property="og:type"               content="Contests" />
+	<meta property="og:title"              content="foodyC MaxVote Result is Here!" />
+	<meta property="og:description"        content="foodyC Winter Contest Category 2 Maximum Vote Result is finally published and consolidated. Visit Here." />
+	<meta property="og:image"              content="fbimg.jpg" />
 </head>
 
 <body background="bg.jpg">
@@ -115,8 +121,7 @@
 
 	<div>
 		<center>
-			<iframe width=650 height=400 frameBorder="0"
-				src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR85YMARTOqjM0g4N9cJieLKUYIj8FjI_zrfJB9IvD1RzxEWEy0lHKxMFQgTWnPo4OBPLVAoOR_0w8R/pubchart?oid=468846732&format=interactive"></iframe>
+			<img alt="piechart for foodyC Winter Contest" src="piechart.svg">
 		</center>
 	</div>
 
@@ -126,8 +131,8 @@
 		<p style="font-family: 'Alata', sans-serif; text-align: center; font-size: 0.8vw;">The Voting has ended on 2nd
 			January, 2020 <br> See Clause 5B on our Policies Page for More informations. </p>
 		<div>
-			<a style="text-decoration: none; color: #e5697e;" href="https://foodyc.xyz/Contests">
-				<p style="font-family: 'Alata', sans-serif; text-align: center;">VOTING PORTAL</p>
+			<a style="text-decoration: none; color: black;" href="https://foodyc.xyz/Contests">
+				<p class="btn" style="font-family: 'Alata', sans-serif; text-align: center; width: 200px; margin-left: 50%; transform: translate(-50%,0);">VOTING PORTAL</p>
 			</a>
 		</div>
 		<div style="font-family: 'Alata', sans-serif; text-align: center;">
