--- a/chart.html
+++ b/chart.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
 	<link rel="icon" href="imge-08.png" type="image/png">
 	<link rel="stylesheet" type="text/css" href="404.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 	<meta charset="utf-8">
 	<meta name="description" content="The Consolidated results for foodyC Winter Contest Category 2 Maximum Votes."/>
 	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
