--- a/404.html
+++ b/404.html
@@ -12,6 +12,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
 	<link rel="icon" href="imge-08.png" type="image/png">
 	<link rel="stylesheet" type="text/css" href="404.css">
+	<meta property="og:url"                content="www.foodyc.xyz/" />
+	<meta property="og:type"               content="Article" />
+	<meta property="og:title"              content="foodyC Home" />
+	<meta property="og:description"        content="foodyC and foody couple's amazing world is here. Explore." />
+	<meta property="og:image"              content="fbimg.jpg" />
 </head>
 
 <!--right click disable-->
