--- a/mail.html
+++ b/mail.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta property="og:url"                content="www.foodyc.xyz/" />
+	<meta property="og:type"               content="Article" />
+	<meta property="og:title"              content="foodyC Home" />
+	<meta property="og:description"        content="foodyC and foody couple's amazing world is here. Explore." />
+	<meta property="og:image"              content="fbimg.jpg" />
 	<title>Visit now</title>
 </head>
 <link rel="icon" type="png" href="imge-08.png">
