--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
 	<link rel="icon" href="imge-08.png" type="image/png">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
+	<meta property="og:url"                content="www.foodyc.xyz/" />
+	<meta property="og:type"               content="Article" />
+	<meta property="og:title"              content="foodyC Home" />
+	<meta property="og:description"        content="foodyC and foody couple's amazing world is here. Explore." />
+	<meta property="og:image"              content="fbimg.jpg" />
 </head>
 <script>
 	function myFunction() {
